# rust-on-android

./: .clang-format  .gitignore  .project  LICENSE.txt  README.md  REF.md  build.gradle  cargo-config.toml  clang-format.sh  gen-config.js  pre-build.sh  prettier.sh  rustfmt.sh  settings.gradle
app/: CMakeLists.txt  build.gradle
app/flatbuffer/: user.fbs  user_generated.js  user_generated.rs
app/libnode/include/node/: node_ext.h
app/rust/: Cargo.toml  api.cpp  build.rs  debug.sh  debug_script.sh  run_emu.sh
app/rust/examples/: main.rs
app/rust/libnode/include/curl/: curl.h  curlbuild.h  curlrules.h  curlver.h  easy.h  mprintf.h  multi.h  stdcheaders.h  system.h  typecheck-gcc.h
app/rust/libnode/include/node/: mallocdebug.h  node_object_wrap.h  uv.h  v8-experimental.h  v8-inspector.h  v8-internal.h  v8-platform.h  v8-preparser.h  v8-profiler.h  v8-util.h  v8-wasm-trap-handler-posix.h  v8-wasm-trap-handler-win.h  v8.h
app/rust/libnode/include/node/libplatform/: libplatform.h  v8-tracing.h
app/rust/libnode/include/node/openssl/: opensslconf.h
app/rust/libnode/include/node/utf8/: checked.h  core.h  unchecked.h
app/rust/libnode/include/openssl/: aes.h  asn1.h  async.h  bio.h  blowfish.h  bn.h  buffer.h  cast.h  cmac.h  cms.h  comp.h  conf.h  conf_api.h  crypto.h  ct.h  des.h  dh.h  dsa.h  e_os2.h  ec.h  engine.h  err.h  evp.h  hmac.h  idea.h  lhash.h  md2.h  md4.h  md5.h  mdc2.h  modes.h  objects.h  ocsp.h  pem.h  pem2.h  pkcs12.h  rand.h  rc2.h  rc4.h  rc5.h  (+15 more)
app/rust/ndk_log/: Cargo.toml
app/rust/ndk_log/src/: lib.rs
app/rust/openssl/include/openssl/: opensslconf.h
app/rust/src/: jni_graphics.rs  lib.rs  main.rs
app/rust/src/buffer/: mod.rs  user_fbs.rs
app/rust/src/dex/: mod.rs
app/rust/src/jni_graphics/: mod.rs
app/rust/src/jni_log/: mod.rs
app/rust/src/legacy/: mod.rs
app/rust/src/macros/: mod.rs
app/rust/src/ndk_graphics/: android.rs  graphics.rs  mandelbrot.rs  mod.rs
app/rust/src/ndk_log/: mod.rs
app/rust/src/ndk_util/: mod.rs
app/rust/src/proto/: mod.rs
app/rust/src/runtime/: console.rs  event.rs  event_loop.rs  fetch.rs  isolate.rs  macros.rs  mod.rs  resource.rs  server.rs  stream_cancel.rs  timer.rs  ui_thread.rs  util.rs
app/rust/src/v8/: mod.rs
app/rust/src/v8_jni/: mod.rs  util.rs
app/rust/utf8_util/: Cargo.toml  build.rs
app/rust/utf8_util/src/: lib.rs
app/rust/v8/: Cargo.toml
app/rust/v8/src/: lib.rs  macros.rs
app/rust/v8/src/sys/: fun.rs  types.rs  util.rs
app/rust/v8/src/types/: macros.rs  mod.rs
app/rust/v8_macros/: Cargo.toml
app/rust/v8_macros/src/: lib.rs
app/src/main/: AndroidManifest.xml
app/src/main/assets/nodejs-project/: main.js  package.json
app/src/main/cpp/: context.cpp  context.h  image-gen.cpp  image-gen.h  java-vm.cpp  java-vm.h  java.cpp  java.h  jobject.cpp  jobject.h  native-lib.cpp  native-lib.h  node-ext.cpp  node-ext.h  utils.cpp  utils.h
app/src/main/cpp/java/: java.cpp  java.h  jobject.cpp  jobject.h  jsobject.cpp  jsobject.h
app/src/main/cpp/lib/: image-gen.cpp  image-gen.h  native-lib.cpp  native-lib.h  node-ext.cpp  node-ext.h
app/src/main/cpp/utils/: utils.cpp  utils.h
app/src/main/cpp/v8/: jsobject.cpp  jsobject.h  v8context.cpp  v8context.h
app/src/main/java/: run.sh
app/src/main/java/com/node/annotations/: CalledByNative.java
app/src/main/java/com/node/sample/: GenerateImageActivity.java  GenerateImageActivity.kt  MainActivity.java  NodeJsToast.java  Observable.java
app/src/main/java/com/node/util/: DenoRunnable.java  JNIHelper.java  JNIUtils.java  JsonUtil.kt  ResourceUtil.kt  RestUtil.kt  ScriptUtils.java  ScriptUtils.kt  Test.java  Util.kt
app/src/main/java/com/node/util/v8/: Response.java
app/src/main/java/com/node/v8/: TimerType.java  UIUpdater.java  V8Context.java  V8Context.kt  V8Promise.java  V8Runnable.java  V8Runnable.kt  V8Utils.java
app/src/main/res/drawable/: border_ui.xml
app/src/main/res/layout/: activity_main.xml  processing_image.xml
app/src/main/res/raw/: core.js  isolate.js  main.js  model.js  updater.js  user.js
app/src/main/res/values/: strings.xml
config/: cargo-config.toml  script.sh
flatbuffer/: build.sh  user.fbs
gradle/wrapper/: gradle-wrapper.properties
inspector/: build.gradle
