[package]
name = "rust"
version = "0.1.0"
build = "build.rs"
authors = ["Hoang Phan <pquochoang2007@gmail.com>"]

[lib]
name = "rust"
crate-type = ["staticlib"]

[build-dependencies]
cc = "1.0"

[target.'cfg(target_os="android")'.dependencies]
libc = "0.2"
num = "0.2.0"
serde = "*"
bytes = "0.4"
itertools = "*"
serde_json = "*"
curl = "0.4.17"
serde_derive = "*"
num-complex = "0.2"
flatbuffers = "0.5.0"
jni = { version = "0.10.2", default-features = false }
