[package]
name = "rust"
version = "0.1.0"
build = "build.rs"
authors = ["Hoang Phan <pquochoang2007@gmail.com>"]
edition = "2018"

[lib]
name = "rust"
crate-type = ["staticlib"]

[build-dependencies]
cc = "1.0"

[target.'cfg(target_os="android")'.dependencies]
libc = "0.2"
num = "0.2.0"
log = "0.4.1"
serde = "1.0"
serde_json = "1.0"
reqwest = "0.9.17"
bytes = "0.4.5"
itertools = "*"
curl = "0.4.17"
serde_derive = "*"
num-complex = "0.2"
flatbuffers = "0.5.0"
futures = "0.1.18"
tokio = "0.1.5"
tokio-codec = "0.1"
tokio-executor = "0.1"
tokio-io = "0.1.6"
tokio-tcp = "0.1"
tokio-timer = "^0.2.6"
lazy_static = "1.3.0"
tokio-threadpool = "0.1.14"
tokio-curl = "0.1"
jni-sys = "0.3.0"
jni = { version = "0.10.2", default-features = false }
v8 = { path = "./v8" }
v8_macros = { path = "./v8_macros" }
ndk_log = { path = "./ndk_log" }
utf8_util = { path = "./utf8_util" }

[profile.release]
debug = true
