[package]
name = "rust"
version = "0.1.0"
build = "build.rs"
authors = ["Hoang Phan <pquochoang2007@gmail.com>"]
edition = "2018"

[lib]
name = "rust"
crate-type = ["staticlib"]

[build-dependencies]
cc = "1.0"

[target.'cfg(target_os="android")'.dependencies]
libc = "0.2"
cast = "0.2.2"
num = "0.2.0"
log = "0.4.1"
serde = "1.0"
serde_json = "1.0"
reqwest = "0.11"
bytes = "0.4.5"
itertools = "*"
serde_derive = "*"
image = "0.22.0"
num-complex = "0.2"
flatbuffers = "22.9.29"
pin-project = "1.0.8"
futures = "0.3.17"
lazy_static = "1.3.0"
jni = { version = "0.19.0", default-features = false }
tokio = { version = "1.4.0", features = ["full"] }
v8 = { path = "./v8" }
v8_macros = { path = "./v8_macros" }
ndk_log = { path = "./ndk_log" }
utf8_util = { path = "./utf8_util" }

[profile.dev]
debug = true
opt-level = 0
panic = 'abort'

[profile.release]
codegen-units = 1
lto = true